# ml-zoomcamp-playground

./: README.md  main.py  pyproject.toml
01-intro/: README.md
01-intro/lab/: homework.ipynb  linear_algebra.ipynb  numpy.ipynb  pandas.ipynb
02-regression/: README.md
02-regression/lab/: homework.ipynb  regression.ipynb  student_performance.ipynb
03-classification/: README.md
03-classification/lab/: classification.ipynb  homework.ipynb  regression.ipynb
04-evaluation/: README.md
04-evaluation/lab/: evaluation.ipynb  homework.ipynb
05-deployment/: README.md  train_churn_model.ipynb
05-deployment/homework_project/: Dockerfile  README.md  answers.txt  client.py  predict.py  predict_v2.py  pyproject.toml  test_model.py
05-deployment/latest_project/: Dockerfile  README.md  predict.py  pyproject.toml  train.py  train_churn_model.ipynb
05-deployment/legacy_project/: Dockerfile  Pipfile  client.py  predict.py  train.py
06-trees/: README.md
06-trees/lab/: homework.ipynb  trees.ipynb
08-deeplearning/: README.md
08-deeplearning/lab/: deeplearning.ipynb  homework.ipynb
09-serverless/: README.md
09-serverless/homework/: Dockerfile  homework.ipynb  lambda_function.py  note.txt
09-serverless/lambda-pytorch/: Dockerfile  clothing_classification_pytorch.ipynb  clothing_classification_single.onnx  lambda_function.py
09-serverless/lambda-sklearn/: Dockerfile  invoke.py  lambda_function.py  test.py
09-serverless/lambda-tf-keras/: Dockerfile  clothing_classification_tf_keras.ipynb  lambda_function.py  test.py
10-kubernetes/: README.md
(+15 files in other folders)
