[project]
name = "ml-zoomcamp-playground"
version = "0.1.0"
description = "ML Zoomcamp Playground"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.1",
    "jupyter>=1.1.1",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "xgboost>=3.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
